--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <i class="fas fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </button>
-            <button class="nav-item" data-tab="techcheck">
+            <button class="nav-item" data-tab="techCheck">
                 <i class="fas fa-clipboard-check"></i>
                 <span>Tech Check</span>
             </button>
